Update social links - remove Instagram/Facebook, add Substack

--- a/index.html
+++ b/index.html
@@ -395,8 +395,7 @@
         <h2>Track Ongoing Discoveries</h2>
         <div class="social-links">
             <a href="https://themurphyexperiment.bandcamp.com/" class="social-link" target="_blank">Bandcamp Archive</a>
-            <a href="#" class="social-link">Instagram Feed</a>
-            <a href="#" class="social-link">Facebook Records</a>
+            <a href="https://substack.com/@monsterplow" class="social-link" target="_blank">Substack Chronicles</a>
             <a href="#" class="social-link">Direct Contact</a>
         </div>
         <div style="text-align: center; margin-top: 40px; color: #1a1a1a; font-size: 1.1rem; font-weight: bold;">
