--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         <div class="social-links">
             <a href="https://themurphyexperiment.bandcamp.com/" class="social-link" target="_blank">Bandcamp Archive</a>
             <a href="https://substack.com/@monsterplow" class="social-link" target="_blank">Substack Chronicles</a>
-            <a href="#" class="social-link">Direct Contact</a>
+            <a href="mailto:themurphyexperiment@gmail.com" class="social-link">Direct Contact</a>
         </div>
         <div style="text-align: center; margin-top: 40px; color: #1a1a1a; font-size: 1.1rem; font-weight: bold;">
             <p style="font-style: italic;">Your support of independent archival research ensures continued excavation and analysis. Every interaction with these artifacts contributes to our understanding of this remarkable phenomenon.</p>
