Update researcher's note to reference early-mid 21st century instead of specific years

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 </div>
             </div>
             <div class="artifact-note">
-                <strong>Researcher's Note:</strong> This collection represents the primary sonic documentation recovered from Subject Group's initial creative period (2020-2024 CE). Analysis suggests a multi-year compositional timeline, with evidence of progressive evolution, experimental chaos, and curious thematic fixations on bovine welfare. Preliminary findings indicate each track may contain encoded information about parallel reality exploration. Further analysis required.
+                <strong>Researcher's Note:</strong> This collection represents the primary sonic documentation recovered from Subject Group's initial creative period during the early-mid 21st century. Analysis suggests a multi-year compositional timeline, with evidence of progressive evolution, experimental chaos, and curious thematic fixations on bovine welfare. Preliminary findings indicate each track may contain encoded information about parallel reality exploration. Further analysis required.
             </div>
             <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8; margin-bottom: 30px;">
                 Ten discrete audio artifacts spanning multiple genres and temporal signatures. Embedded throughout: musical Easter eggs, dimensional coordinates, and what may be the first documented cases of humor integration into progressive rock composition. Recommended listening approach: repeated analysis reveals previously undetected layers.
