Make image analysis more vague - only mentions entities without specifying how many

--- a/shapes.html
+++ b/shapes.html
@@ -68,7 +68,7 @@
             
             <img src="media/shapes-comic-frame-01.jpg" alt="First Comic Frame - Shapes" class="comic-frame">
 
-            <p style="margin-top: 30px; font-style: italic; background: rgba(139, 90, 43, 0.1); padding: 20px; border-radius: 5px;"><strong>Image Analysis:</strong> The recovered visual frame appears to depict the four confirmed interdimensional subjects in what researchers are calling "the beginning of their adventures." The artistic style is consistent with terrestrial comic book traditions, yet the imagery suggests narrative elements that may transcend conventional storytelling limitations. Further frames are currently being carefully excavated from the site.</p>
+            <p style="margin-top: 30px; font-style: italic; background: rgba(139, 90, 43, 0.1); padding: 20px; border-radius: 5px;"><strong>Image Analysis:</strong> The recovered visual frame appears to depict entities connected to Case #1310 in what researchers are calling "the beginning of their adventures." Initial examination shows at least one figure consistent with documented subject profiles, alongside what may be an assistant or companion entity. The artistic style is consistent with terrestrial comic book traditions, yet the imagery suggests narrative elements that may transcend conventional storytelling limitations. Further frames are currently being carefully excavated from the site to clarify the full cast of characters involved.</p>
 
             <h3 style="color: #3d2813; font-size: 1.8rem; margin: 40px 0 20px 0;">Preliminary Assessment</h3>
 
@@ -99,7 +99,7 @@
                 </div>
                 <div style="background: rgba(212, 197, 160, 0.8); padding: 25px; border-radius: 10px; border: 2px solid rgba(101, 67, 33, 0.5);">
                     <h4 style="color: #3d2813; margin-bottom: 10px; font-size: 1.2rem;">✓ Same Collective</h4>
-                    <p style="font-size: 0.95rem; line-height: 1.6;">All four interdimensional subjects appear in recovered materials</p>
+                    <p style="font-size: 0.95rem; line-height: 1.6;">Entities from Case #1310 confirmed in recovered materials</p>
                 </div>
                 <div style="background: rgba(212, 197, 160, 0.8); padding: 25px; border-radius: 10px; border: 2px solid rgba(101, 67, 33, 0.5);">
                     <h4 style="color: #3d2813; margin-bottom: 10px; font-size: 1.2rem;">⏳ In Progress</h4>
