Website structure reorg

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Courier New', monospace;
-            background: #d4c5a0 url('background-texture.jpg') center/cover fixed;
+            background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed;
             color: #2a2a2a;
             overflow-x: hidden;
         }
