--- a/conclusion.html
+++ b/conclusion.html
@@ -6,7 +6,7 @@
     <title>Case Conclusion | The Murphy Experiment</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
+        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
         body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; pointer-events: none; z-index: 0; }
         header { position: relative; padding: 40px 20px; text-align: center; background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%); }
         .archive-label { font-size: 0.9rem; color: #8b0000; letter-spacing: 0.2em; margin-bottom: 10px; font-weight: bold; text-transform: uppercase; border: 2px solid #8b0000; padding: 8px 20px; background: rgba(139, 0, 0, 0.1); display: inline-block; }
@@ -45,7 +45,7 @@
                 <h3>🌟 CASE #1310: PHENOMENON CONFIRMED 🌟</h3>
                 <p style="font-weight: bold; font-size: 1.3rem; margin: 25px 0; line-height: 1.8; color: #014208;">ALL FOUR CORE SUBJECTS CONFIRMED AS INTERDIMENSIONAL MANIFESTATIONS</p>
                 
-                <img src="the-murphy-experiment-collage.jpg" alt="The Complete Interdimensional Collective" class="collective-image">
+                <img src="media/the-murphy-experiment-collage.jpg" alt="The Complete Interdimensional Collective" class="collective-image">
                 
                 <p style="margin-top: 25px; line-height: 1.8; font-size: 1.05rem;"><strong>The Murphy Experiment</strong> represents the first fully-documented case of an interdimensional musical collective operating across reality boundaries. Analysis reveals deliberate team composition, each member contributing specialized capabilities from their dimensional origin.</p>
             </div>
