--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Courier New', monospace;
-            background: #d4c5a0 url('background-texture.jpg') center/cover fixed;
+            background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed;
             color: #2a2a2a;
             overflow-x: hidden;
         }
@@ -355,7 +355,7 @@
         <div class="album-section">
             <h2>Discovery Log</h2>
             <div style="display: flex; flex-direction: column; align-items: center; gap: 30px; margin-bottom: 30px;">
-                <img src="boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 350px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.6);">
+                <img src="media/boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 350px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.6);">
                 <div style="text-align: center;">
                     <div class="album-title">The Boney Files</div>
                     <div class="album-subtitle">"Musical missives from the kitchen of available time"</div>
