--- a/angela-brown.html
+++ b/angela-brown.html
@@ -6,7 +6,7 @@
     <title>Subject Profile: Angela Brown | The Murphy Experiment</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
+        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
         body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; pointer-events: none; z-index: 0; }
         header { position: relative; padding: 40px 20px; text-align: center; background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%); }
         .archive-label { font-size: 0.9rem; color: #8b0000; letter-spacing: 0.2em; margin-bottom: 10px; font-weight: bold; text-transform: uppercase; border: 2px solid #8b0000; padding: 8px 20px; background: rgba(139, 0, 0, 0.1); display: inline-block; }
@@ -52,7 +52,7 @@
                 <p style="font-style: italic;">Cross-dimensional profile reveals: Noble or aristocratic lineage (Countess title), strategic thinking capabilities suggested by "Switchbait" designation, commanding presence, sophisticated communication skills. Visual evidence provides final proof of Case #1310's interdimensional nature.</p>
             </div>
 
-            <img src="countess-vanessa-switchbait.jpg" alt="Countess Vanessa Switchbait" class="character-image">
+            <img src="media/countess-vanessa-switchbait.jpg" alt="Countess Vanessa Switchbait" class="character-image">
             
             <p style="margin-top: 30px;"><strong>Title Analysis:</strong> "Countess" designation suggests aristocratic background from dimensional hierarchy, implying natural leadership, refinement, and commanding vocal presence - all characteristics abundantly evident in recovered audio artifacts. Subject demonstrates exceptional ability to shift between delicate emotional nuance and powerful dramatic delivery, befitting noble lineage trained in sophisticated communication arts.</p>
 
