--- a/gary-bloxsom.html
+++ b/gary-bloxsom.html
@@ -6,7 +6,7 @@
     <title>Subject Profile: Gary Bloxsom | The Murphy Experiment</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
+        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
         body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; pointer-events: none; z-index: 0; }
         header { position: relative; padding: 40px 20px; text-align: center; background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%); }
         .archive-label { font-size: 0.9rem; color: #8b0000; letter-spacing: 0.2em; margin-bottom: 10px; font-weight: bold; text-transform: uppercase; border: 2px solid #8b0000; padding: 8px 20px; background: rgba(139, 0, 0, 0.1); display: inline-block; }
@@ -52,7 +52,7 @@
                 <p style="font-style: italic;">Cross-dimensional profile indicates: Military or leadership background, precision-oriented personality, expertise in rhythmic/temporal coordination. Rank designation "Captain" suggests command experience and tactical thinking. Visual evidence confirms dimensional origin.</p>
             </div>
 
-            <img src="captain-bash-glockenheim.jpg" alt="Captain Bash Glockenheim" class="character-image">
+            <img src="media/captain-bash-glockenheim.jpg" alt="Captain Bash Glockenheim" class="character-image">
             
             <p style="margin-top: 30px;"><strong>Dimensional Profile Assessment:</strong> The "Captain" rank designation provides crucial context for subject's role within Case #1310. Military precision training would explain the exceptional temporal accuracy documented in percussion work across all recovered audio artifacts. Rhythmic foundation demonstrates discipline and exactitude characteristic of command-level personnel from structured dimensional hierarchies.</p>
 
