--- a/john-caulfield.html
+++ b/john-caulfield.html
@@ -6,7 +6,7 @@
     <title>Subject Profile: John Caulfield | The Murphy Experiment</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
+        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
         body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; pointer-events: none; z-index: 0; }
         header { position: relative; padding: 40px 20px; text-align: center; background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%); }
         .archive-label { font-size: 0.9rem; color: #8b0000; letter-spacing: 0.2em; margin-bottom: 10px; font-weight: bold; text-transform: uppercase; border: 2px solid #8b0000; padding: 8px 20px; background: rgba(139, 0, 0, 0.1); display: inline-block; }
@@ -52,7 +52,7 @@
                 <p style="font-style: italic;">Cross-dimensional analysis indicates: Academic/scientific credentials (doctorate-level), playful or unconventional methodology suggested by surname, creative problem-solving approach. Visual documentation confirms interdimensional origin.</p>
             </div>
 
-            <img src="dr-thierry-highjinks.jpg" alt="Dr. Thierry Highjinks" class="character-image">
+            <img src="media/dr-thierry-highjinks.jpg" alt="Dr. Thierry Highjinks" class="character-image">
             
             <p style="margin-top: 30px;"><strong>Nomenclature Analysis:</strong> The surname "Highjinks" provides critical insight into subject's dimensional personality profile. Term denotes playful mischief, creative chaos, unconventional behavior - precisely the characteristics observed in Case #1310's documented musical output. Combined with "Doctor" title, suggests academic rigor applied through unorthodox lens. This paradox (discipline + chaos) mirrors the band's "Genre Fluid Rock" classification.</p>
 
