--- a/stephen-murphy.html
+++ b/stephen-murphy.html
@@ -6,7 +6,7 @@
     <title>Subject Profile: Stephen A. Murphy | The Murphy Experiment</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
+        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
         body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; pointer-events: none; z-index: 0; }
         header { position: relative; padding: 40px 20px; text-align: center; background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%); }
         .archive-label { font-size: 0.9rem; color: #8b0000; letter-spacing: 0.2em; margin-bottom: 10px; font-weight: bold; text-transform: uppercase; border: 2px solid #8b0000; padding: 8px 20px; background: rgba(139, 0, 0, 0.1); display: inline-block; }
@@ -50,7 +50,7 @@
                 <p style="font-style: italic;">Cross-dimensional character analysis indicates: Scientific background, propensity for experimentation, possible expertise in reality manipulation. Subject appears to be primary architect of interdimensional collective. Visual evidence attached below.</p>
             </div>
 
-            <img src="professor-zachary-zap.jpg" alt="Professor Zachary Zap" class="character-image">
+            <img src="media/professor-zachary-zap.jpg" alt="Professor Zachary Zap" class="character-image">
             
             <p style="margin-top: 30px;"><strong>Primary Subject Status:</strong> Evidence strongly suggests this entity serves as Case #1310's founder and principal coordinator. The collective bears subject's dimensional surname ("The Murphy Experiment"), indicating leadership role and conceptual ownership. Subject appears responsible for project inception, creative vision, and ongoing dimensional coordination across 5,000+ mile geographic separation between Arizona and Northern Ireland recording locations.</p>
 
