--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
             }
         }
     </style>
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
 </head>
 <body>
     <div class="stars" id="stars"></div>
