Add favicon to angela-brown.html

--- a/angela-brown.html
+++ b/angela-brown.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Subject Profile: Angela Brown | The Murphy Experiment</title>
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
