--- a/conclusion.html
+++ b/conclusion.html
@@ -4,28 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Case Conclusion | The Murphy Experiment</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
-        body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; pointer-events: none; z-index: 0; }
-        header { position: relative; padding: 40px 20px; text-align: center; background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%); }
-        .archive-label { font-size: 0.9rem; color: #8b0000; letter-spacing: 0.2em; margin-bottom: 10px; font-weight: bold; text-transform: uppercase; border: 2px solid #8b0000; padding: 8px 20px; background: rgba(139, 0, 0, 0.1); display: inline-block; }
-        .logo { font-family: 'Courier New', monospace; font-size: 3rem; font-weight: bold; color: #014208; margin-bottom: 10px; text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); letter-spacing: 0.05em; }
-        .back-link { display: inline-block; margin-top: 20px; background: linear-gradient(135deg, #654321, #4a3319); color: #f5e6d3; padding: 12px 30px; border: 2px solid #8b5a2b; border-radius: 50px; font-size: 1rem; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 5px 20px rgba(101, 67, 33, 0.4); margin: 0 10px; }
-        .back-link:hover { transform: translateY(-3px); box-shadow: 0 8px 30px rgba(101, 67, 33, 0.6); background: linear-gradient(135deg, #8b5a2b, #654321); }
-        section { position: relative; padding: 80px 20px; max-width: 1200px; margin: 0 auto; }
-        h2 { font-size: 2.5rem; color: #3d2813; margin-bottom: 30px; text-align: center; text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5); font-weight: bold; }
-        .section-label { text-align: center; font-size: 0.85rem; color: #8b0000; letter-spacing: 0.15em; margin-bottom: 15px; font-weight: bold; text-transform: uppercase; }
-        .conclusion-content { background: rgba(245, 230, 211, 0.95); padding: 60px 40px; border-radius: 20px; border: 3px solid rgba(101, 67, 33, 0.6); box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3); line-height: 1.8; font-size: 1.1rem; color: #1a1a1a; }
-        .final-conclusion { background: rgba(1, 66, 8, 0.15); border: 4px double #014208; padding: 50px; border-radius: 15px; margin: 40px 0; text-align: center; }
-        .final-conclusion h3 { color: #014208; font-size: 2.2rem; margin-bottom: 25px; text-transform: uppercase; letter-spacing: 0.15em; }
-        .collective-image { max-width: 800px; width: 100%; border-radius: 15px; box-shadow: 0 15px 50px rgba(0,0,0,0.5); border: 4px solid rgba(1, 66, 8, 0.8); margin: 30px auto; display: block; }
-        .subject-summary { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin: 30px 0; }
-        .subject-box { background: rgba(212, 197, 160, 0.8); padding: 20px; border-radius: 10px; border: 2px solid rgba(101, 67, 33, 0.5); }
-        .subject-box h4 { color: #3d2813; margin-bottom: 10px; font-size: 1.2rem; }
-        .subject-box p { font-size: 0.95rem; line-height: 1.6; }
-        footer { text-align: center; padding: 40px 20px; color: #3d2813; border-top: 2px solid rgba(101, 67, 33, 0.6); margin-top: 80px; font-weight: bold; }
-        @media (max-width: 768px) { .logo { font-size: 2rem; } h2 { font-size: 2rem; } .final-conclusion h3 { font-size: 1.5rem; } }
+        /* Page-specific styles for conclusion.html */
+        .conclusion-content {
+            background: rgba(245, 230, 211, 0.95);
+            padding: 60px 40px;
+            border-radius: 20px;
+            border: 3px solid rgba(101, 67, 33, 0.6);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+            line-height: 1.8;
+            font-size: 1.1rem;
+            color: #1a1a1a;
+        }
+
+        .final-conclusion {
+            background: rgba(1, 66, 8, 0.15);
+            border: 4px double #014208;
+            padding: 50px;
+            border-radius: 15px;
+            margin: 40px 0;
+            text-align: center;
+        }
+
+        .final-conclusion h3 {
+            color: #014208;
+            font-size: 2.2rem;
+            margin-bottom: 25px;
+            text-transform: uppercase;
+            letter-spacing: 0.15em;
+        }
+
+        .collective-image {
+            max-width: 800px;
+            width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 15px 50px rgba(0,0,0,0.5);
+            border: 4px solid rgba(1, 66, 8, 0.8);
+            margin: 30px auto;
+            display: block;
+        }
+
+        .subject-summary {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin: 30px 0;
+        }
+
+        .subject-box {
+            background: rgba(212, 197, 160, 0.8);
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid rgba(101, 67, 33, 0.5);
+        }
+
+        .subject-box h4 {
+            color: #3d2813;
+            margin-bottom: 10px;
+            font-size: 1.2rem;
+        }
+
+        .subject-box p {
+            font-size: 0.95rem;
+            line-height: 1.6;
+        }
+
+        @media (max-width: 768px) {
+            .final-conclusion h3 {
+                font-size: 1.5rem;
+            }
+        }
     </style>
 </head>
 <body>
