--- a/shapes.html
+++ b/shapes.html
@@ -4,27 +4,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Discovery: Shapes | The Murphy Experiment</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
     <style>
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body { font-family: 'Courier New', monospace; background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed; color: #2a2a2a; overflow-x: hidden; }
-        body::before { content: ''; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: transparent; pointer-events: none; z-index: 0; }
-        header { position: relative; padding: 40px 20px; text-align: center; background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%); }
-        .archive-label { font-size: 0.9rem; color: #8b0000; letter-spacing: 0.2em; margin-bottom: 10px; font-weight: bold; text-transform: uppercase; border: 2px solid #8b0000; padding: 8px 20px; background: rgba(139, 0, 0, 0.1); display: inline-block; }
-        .logo { font-family: 'Courier New', monospace; font-size: 3rem; font-weight: bold; color: #014208; margin-bottom: 10px; text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3); letter-spacing: 0.05em; }
-        .back-link { display: inline-block; margin-top: 20px; background: linear-gradient(135deg, #654321, #4a3319); color: #f5e6d3; padding: 12px 30px; border: 2px solid #8b5a2b; border-radius: 50px; font-size: 1rem; cursor: pointer; text-decoration: none; transition: all 0.3s; box-shadow: 0 5px 20px rgba(101, 67, 33, 0.4); margin: 0 10px; }
-        .back-link:hover { transform: translateY(-3px); box-shadow: 0 8px 30px rgba(101, 67, 33, 0.6); background: linear-gradient(135deg, #8b5a2b, #654321); }
-        section { position: relative; padding: 80px 20px; max-width: 1200px; margin: 0 auto; }
-        h2 { font-size: 2.5rem; color: #3d2813; margin-bottom: 30px; text-align: center; text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5); font-weight: bold; }
-        .section-label { text-align: center; font-size: 0.85rem; color: #8b0000; letter-spacing: 0.15em; margin-bottom: 15px; font-weight: bold; text-transform: uppercase; }
-        .discovery-content { background: rgba(245, 230, 211, 0.95); padding: 60px 40px; border-radius: 20px; border: 3px solid rgba(101, 67, 33, 0.6); box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3); line-height: 1.8; font-size: 1.1rem; color: #1a1a1a; }
-        .urgent-box { background: rgba(139, 0, 0, 0.2); border: 4px double #8b0000; padding: 40px; border-radius: 15px; margin: 30px 0; animation: pulse-border 2s infinite; }
-        @keyframes pulse-border { 0%, 100% { border-color: #8b0000; } 50% { border-color: #a00000; } }
-        .urgent-box h3 { color: #8b0000; font-size: 1.8rem; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 0.1em; text-align: center; }
-        .banner-image { max-width: 100%; width: 100%; border-radius: 15px; box-shadow: 0 15px 50px rgba(0,0,0,0.5); border: 4px solid rgba(139, 0, 0, 0.8); margin: 30px 0; display: block; }
-        .comic-frame { max-width: 800px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.4); border: 3px solid rgba(101, 67, 33, 0.6); margin: 30px auto; display: block; }
-        .evidence-note { background: rgba(1, 66, 8, 0.1); border-left: 5px solid #014208; padding: 25px; border-radius: 5px; margin: 30px 0; font-style: italic; }
-        footer { text-align: center; padding: 40px 20px; color: #3d2813; border-top: 2px solid rgba(101, 67, 33, 0.6); margin-top: 80px; font-weight: bold; }
-        @media (max-width: 768px) { .logo { font-size: 2rem; } h2 { font-size: 2rem; } }
+        /* Page-specific styles for shapes.html */
+        .discovery-content {
+            background: rgba(245, 230, 211, 0.95);
+            padding: 60px 40px;
+            border-radius: 20px;
+            border: 3px solid rgba(101, 67, 33, 0.6);
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.3);
+            line-height: 1.8;
+            font-size: 1.1rem;
+            color: #1a1a1a;
+        }
+
+        .urgent-box {
+            background: rgba(139, 0, 0, 0.2);
+            border: 4px double #8b0000;
+            padding: 40px;
+            border-radius: 15px;
+            margin: 30px 0;
+            animation: pulse-border 2s infinite;
+        }
+
+        @keyframes pulse-border {
+            0%, 100% { border-color: #8b0000; }
+            50% { border-color: #a00000; }
+        }
+
+        .urgent-box h3 {
+            color: #8b0000;
+            font-size: 1.8rem;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            text-align: center;
+        }
+
+        .banner-image {
+            max-width: 100%;
+            width: 100%;
+            border-radius: 15px;
+            box-shadow: 0 15px 50px rgba(0,0,0,0.5);
+            border: 4px solid rgba(139, 0, 0, 0.8);
+            margin: 30px 0;
+            display: block;
+        }
+
+        .comic-frame {
+            max-width: 800px;
+            width: 100%;
+            border-radius: 10px;
+            box-shadow: 0 10px 40px rgba(0,0,0,0.4);
+            border: 3px solid rgba(101, 67, 33, 0.6);
+            margin: 30px auto;
+            display: block;
+        }
+
+        .evidence-note {
+            background: rgba(1, 66, 8, 0.1);
+            border-left: 5px solid #014208;
+            padding: 25px;
+            border-radius: 5px;
+            margin: 30px 0;
+            font-style: italic;
+        }
     </style>
 </head>
 <body>
