--- a/videos.html
+++ b/videos.html
@@ -4,109 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visual Evidence Archive | The Murphy Experiment</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
     <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Courier New', monospace;
-            background: #d4c5a0 url('media/background-texture.jpg') center/cover fixed;
-            color: #2a2a2a;
-            overflow-x: hidden;
-        }
-
-        body::before {
-            content: '';
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: transparent;
-            pointer-events: none;
-            z-index: 0;
-        }
-
-        header {
-            position: relative;
-            padding: 40px 20px;
-            text-align: center;
-            background: radial-gradient(circle at center, rgba(212, 197, 160, 0.6) 0%, rgba(212, 197, 160, 0.3) 70%);
-        }
-
-        .archive-label {
-            font-size: 0.9rem;
-            color: #8b0000;
-            letter-spacing: 0.2em;
-            margin-bottom: 10px;
-            font-weight: bold;
-            text-transform: uppercase;
-            border: 2px solid #8b0000;
-            padding: 8px 20px;
-            background: rgba(139, 0, 0, 0.1);
-            display: inline-block;
-        }
-
-        .logo {
-            font-family: 'Courier New', monospace;
-            font-size: 3rem;
-            font-weight: bold;
-            color: #014208;
-            margin-bottom: 10px;
-            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
-            letter-spacing: 0.05em;
-        }
-
-        .back-link {
-            display: inline-block;
-            margin-top: 20px;
-            background: linear-gradient(135deg, #654321, #4a3319);
-            color: #f5e6d3;
-            padding: 12px 30px;
-            border: 2px solid #8b5a2b;
-            border-radius: 50px;
-            font-size: 1rem;
-            cursor: pointer;
-            text-decoration: none;
-            transition: all 0.3s;
-            box-shadow: 0 5px 20px rgba(101, 67, 33, 0.4);
-        }
-
-        .back-link:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 8px 30px rgba(101, 67, 33, 0.6);
-            background: linear-gradient(135deg, #8b5a2b, #654321);
-        }
-
-        section {
-            position: relative;
-            padding: 80px 20px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        h2 {
-            font-size: 2.5rem;
-            color: #3d2813;
-            margin-bottom: 30px;
-            text-align: center;
-            text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.5);
-            font-weight: bold;
-        }
-
-        .section-label {
-            text-align: center;
-            font-size: 0.85rem;
-            color: #8b0000;
-            letter-spacing: 0.15em;
-            margin-bottom: 15px;
-            font-weight: bold;
-            text-transform: uppercase;
-        }
-
+        /* Page-specific styles for videos.html */
         .artifact-note {
             color: #1a1a1a;
             font-size: 1rem;
@@ -236,24 +137,7 @@
             border: 1px solid #8b0000;
         }
 
-        footer {
-            text-align: center;
-            padding: 40px 20px;
-            color: #3d2813;
-            border-top: 2px solid rgba(101, 67, 33, 0.6);
-            margin-top: 80px;
-            font-weight: bold;
-        }
-
         @media (max-width: 768px) {
-            .logo {
-                font-size: 2rem;
-            }
-
-            h2 {
-                font-size: 2rem;
-            }
-
             .videos-grid {
                 grid-template-columns: 1fr;
             }
