--- a/boney-files.html
+++ b/boney-files.html
@@ -123,6 +123,108 @@
             font-weight: bold;
         }
 
+        /* Clickable album cover styles */
+        .album-cover-container {
+            position: relative;
+            cursor: pointer;
+            display: inline-block;
+        }
+
+        .album-cover-container img {
+            transition: all 0.3s;
+        }
+
+        .album-cover-container:hover img {
+            transform: scale(1.05);
+            box-shadow: 0 15px 50px rgba(0,0,0,0.5);
+        }
+
+        .album-cover-container::after {
+            content: '🔍 Click to enlarge';
+            position: absolute;
+            bottom: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-size: 0.85rem;
+            opacity: 0;
+            transition: opacity 0.3s;
+            pointer-events: none;
+        }
+
+        .album-cover-container:hover::after {
+            opacity: 1;
+        }
+
+        /* Lightbox modal styles */
+        .lightbox-modal {
+            display: none;
+            position: fixed;
+            z-index: 9999;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.95);
+            justify-content: center;
+            align-items: center;
+            animation: fadeIn 0.3s;
+        }
+
+        .lightbox-modal.active {
+            display: flex;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        .lightbox-content {
+            position: relative;
+            max-width: 90%;
+            max-height: 90vh;
+            animation: zoomIn 0.3s;
+        }
+
+        @keyframes zoomIn {
+            from { transform: scale(0.8); }
+            to { transform: scale(1); }
+        }
+
+        .lightbox-content img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.8);
+        }
+
+        .lightbox-close {
+            position: absolute;
+            top: -40px;
+            right: 0;
+            color: white;
+            font-size: 2rem;
+            font-weight: bold;
+            cursor: pointer;
+            background: rgba(139, 0, 0, 0.8);
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: all 0.3s;
+        }
+
+        .lightbox-close:hover {
+            background: rgba(139, 0, 0, 1);
+            transform: rotate(90deg);
+        }
+
         @media (max-width: 768px) {
             .album-title {
                 font-size: 2rem;
@@ -132,6 +234,11 @@
                 flex-direction: column;
                 align-items: flex-start;
                 gap: 5px;
+            }
+
+            .lightbox-close {
+                top: 10px;
+                right: 10px;
             }
         }
     </style>
@@ -148,7 +255,9 @@
         <div class="section-label">CASE #1310 - COLLECTION ANALYSIS</div>
         <div class="album-section">
             <div style="display: flex; flex-direction: column; align-items: center; gap: 30px; margin-bottom: 30px;">
-                <img src="media/boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 400px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.6);">
+                <div class="album-cover-container" onclick="openLightbox()">
+                    <img src="media/boney-files-cover.jpg" alt="The Boney Files Album Cover" style="max-width: 400px; width: 100%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.3); border: 3px solid rgba(101, 67, 33, 0.6);">
+                </div>
                 <div style="text-align: center;">
                     <div class="album-title">The Boney Files</div>
                     <div class="album-subtitle">"Musical missives from the kitchen of available time"</div>
@@ -258,10 +367,37 @@
         </div>
     </section>
 
+    <!-- Lightbox Modal -->
+    <div id="albumLightbox" class="lightbox-modal" onclick="closeLightbox()">
+        <div class="lightbox-content" onclick="event.stopPropagation()">
+            <span class="lightbox-close" onclick="closeLightbox()">&times;</span>
+            <img src="media/boney-files-cover.jpg" alt="The Boney Files Album Cover - Full Size">
+        </div>
+    </div>
+
     <footer>
         <p>&copy; 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
         <p style="margin-top: 15px; font-size: 0.85rem; color: #8b0000;">CLASSIFICATION LEVEL: UNRESTRICTED | Document ID: TME-1310-BONEY</p>
     </footer>
+
+    <script>
+        function openLightbox() {
+            document.getElementById('albumLightbox').classList.add('active');
+            document.body.style.overflow = 'hidden';
+        }
+
+        function closeLightbox() {
+            document.getElementById('albumLightbox').classList.remove('active');
+            document.body.style.overflow = 'auto';
+        }
+
+        // Close on Escape key
+        document.addEventListener('keydown', function(event) {
+            if (event.key === 'Escape') {
+                closeLightbox();
+            }
+        });
+    </script>
 </body>
 </html>
