Revert to "early-mid 21st century" instead of specific years

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <div class="artifact-note">
-                <strong>Field Notes:</strong> This collection comprises the primary audio documentation from the Subject Group's initial creative period (2020–2024 CE). Compositional analysis indicates a multi-year development timeline with evidence of stylistic evolution across tracks. Thematic elements include references to parallel dimensions, domestic observations, and recurring bovine imagery. Cross-referencing with other recovered materials is ongoing.
+                <strong>Field Notes:</strong> This collection comprises the primary audio documentation from the Subject Group's initial creative period during the early-mid 21st century. Compositional analysis indicates a multi-year development timeline with evidence of stylistic evolution across tracks. Thematic elements include references to parallel dimensions, domestic observations, and recurring bovine imagery. Cross-referencing with other recovered materials is ongoing.
             </div>
             <p style="color: #1a1a1a; font-size: 1.1rem; line-height: 1.8; margin-bottom: 30px;">
                 Ten audio artifacts spanning multiple genres and production approaches. Notable characteristics include embedded musical references, layered arrangements, and integration of comedic elements within progressive rock structures. Repeated listening recommended for comprehensive analysis.
