Fix spacing between classified banner and stamp
- Add header .archive-label override with margin-bottom: 40px

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             align-items: center;
         }
 
+        header .archive-label {
+            margin-bottom: 40px;
+        }
+
         .stamp-container {
             position: relative;
             display: inline-block;
