--- a/index.html
+++ b/index.html
@@ -178,9 +178,16 @@
 
         .album-buttons {
             display: flex;
-            gap: 15px;
-            flex-wrap: wrap;
+            gap: 10px;
+            flex-wrap: nowrap;
             margin-top: 20px;
+        }
+
+        .album-buttons .cta-button {
+            padding: 12px 24px;
+            font-size: 0.95rem;
+            margin: 0;
+            white-space: nowrap;
         }
 
         /* Members section keeps center alignment */
@@ -224,6 +231,11 @@
             .postmark-text-top,
             .postmark-text-bottom {
                 font-size: 0.5rem;
+            }
+
+            .album-buttons {
+                flex-wrap: wrap;
+                justify-content: center;
             }
         }
     </style>
@@ -279,9 +291,9 @@
                     Ten audio artifacts spanning multiple genres and production approaches. Notable characteristics include embedded musical references, layered arrangements, and integration of comedic elements within progressive rock structures. Repeated listening recommended for comprehensive analysis.
                 </p>
                 <div class="album-buttons">
-                    <a href="boney-files.html" class="cta-button">Complete Artifact Analysis</a>
-                    <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Access Audio Files</a>
-                    <a href="videos.html" class="cta-button">View Visual Documentation</a>
+                    <a href="boney-files.html" class="cta-button">Artifact Analysis</a>
+                    <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Audio Files</a>
+                    <a href="videos.html" class="cta-button">Visual Docs</a>
                 </div>
                 <div class="data-tag">
                     RECORD_ID: TME-BF-001 | CLASSIFICATION: UNRESTRICTED | LAST_UPDATED: 3147.03.08
