Restore full button labels
- Complete Artifact Analysis
- Access Audio Files
- View Visual Documentation

--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
                     Ten audio artifacts spanning multiple genres and production approaches. Notable characteristics include embedded musical references, layered arrangements, and integration of comedic elements within progressive rock structures. Repeated listening recommended for comprehensive analysis.
                 </p>
                 <div class="album-buttons">
-                    <a href="boney-files.html" class="cta-button">Artifact Analysis</a>
-                    <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Audio Files</a>
-                    <a href="videos.html" class="cta-button">Visual Docs</a>
+                    <a href="boney-files.html" class="cta-button">Complete Artifact Analysis</a>
+                    <a href="https://themurphyexperiment.bandcamp.com/" class="cta-button" target="_blank">Access Audio Files</a>
+                    <a href="videos.html" class="cta-button">View Visual Documentation</a>
                 </div>
                 <div class="data-tag">
                     RECORD_ID: TME-BF-001 | CLASSIFICATION: UNRESTRICTED | LAST_UPDATED: 3147.03.08
