Remove parchment box styling from about-content
- Override global styles to remove background, border, box-shadow, padding
- Content now displays directly on page background like index.html
- Should match the 900px width properly now

--- a/about.html
+++ b/about.html
@@ -110,7 +110,12 @@
             margin-top: 2px;
         }
 
+        /* Override global .about-content to remove box styling */
         .about-content {
+            background: none;
+            border: none;
+            box-shadow: none;
+            padding: 0;
             max-width: 900px;
             margin: 0 auto;
         }
