Restore parchment box styling with wider 1000px max-width
- Remove overrides that stripped box styling
- Set max-width to 1000px to make boxes wider
- Boxes now have background, border, shadow back

--- a/about.html
+++ b/about.html
@@ -110,14 +110,9 @@
             margin-top: 2px;
         }
 
-        /* Override global .about-content to remove box styling */
+        /* Wider parchment boxes */
         .about-content {
-            background: none;
-            border: none;
-            box-shadow: none;
-            padding: 0;
-            max-width: 900px;
-            margin: 0 auto;
+            max-width: 1000px;
         }
 
         .about-content .section-label {
