--- a/about.html
+++ b/about.html
@@ -10,6 +10,9 @@
         /* Page-specific styles for about.html */
         header {
             padding: 60px 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         header .archive-label {
