Update 2nd box text and remove hover effects from detail cards

--- a/boney-files.html
+++ b/boney-files.html
@@ -69,13 +69,6 @@
             padding: 30px;
             border-radius: 15px;
             border: 2px solid rgba(101, 67, 33, 0.5);
-            transition: all 0.3s;
-        }
-
-        .detail-card:hover {
-            transform: translateY(-5px);
-            border-color: rgba(101, 67, 33, 0.8);
-            box-shadow: 0 10px 30px rgba(101, 67, 33, 0.3);
         }
 
         .detail-card h3 {
@@ -350,7 +343,7 @@
                 </div>
                 <div class="detail-card">
                     <h3>Released October 2025 CE</h3>
-                    <p>Development period: approximately 4 years</p>
+                    <p>Multi-year compilation period documented</p>
                 </div>
                 <div class="detail-card">
                     <h3>44 Minutes Total</h3>
