Override max-width on credits .about-content to match album section width

--- a/boney-files.html
+++ b/boney-files.html
@@ -127,6 +127,11 @@
             font-weight: bold;
         }
 
+        /* Override global max-width for credits section */
+        #credits .about-content {
+            max-width: 100%;
+        }
+
         /* Album covers container */
         .album-covers-container {
             display: flex;
