Move Return to Archive Index button to footer area

--- a/boney-files.html
+++ b/boney-files.html
@@ -309,7 +309,6 @@
             </div>
         </div>
         <p style="color: #3d2813; font-size: 1.1rem; font-style: italic; font-weight: bold; margin-top: 15px;">Primary Collection - Technical Analysis</p>
-        <a href="index.html" class="back-link">← Return to Archive Index</a>
     </header>
 
     <section id="album">
@@ -448,7 +447,8 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
+        <a href="index.html" class="back-link">← Return to Archive Index</a>
+        <p style="margin-top: 20px;">&copy; 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
         <p class="data-tag" style="text-align: center; margin-top: 15px; border-top: none; padding-top: 0;">Document ID: TME-1310-REC001 | SESSION: ACTIVE</p>
     </footer>
