Use new .page-subtitle class for page title

--- a/boney-files.html
+++ b/boney-files.html
@@ -308,7 +308,7 @@
                 <span class="postmark-text-bottom">ARCHIVE DEPT</span>
             </div>
         </div>
-        <p style="color: #3d2813; font-size: 1.1rem; font-style: italic; font-weight: bold; margin-top: 15px;">Primary Collection - Technical Analysis</p>
+        <p class="page-subtitle">Primary Collection - Technical Analysis</p>
     </header>
 
     <section id="album">
