Move Credits h2 above section label in credits section

--- a/boney-files.html
+++ b/boney-files.html
@@ -131,6 +131,14 @@
             font-weight: bold;
         }
 
+        #credits h2 {
+            margin-bottom: 8px;
+        }
+
+        #credits .about-content {
+            margin-top: 8px;
+        }
+
         /* Album covers container */
         .album-covers-container {
             display: flex;
@@ -415,8 +423,8 @@
     </section>
 
     <section id="credits">
-        <div class="section-label">[REC_001.2] PERSONNEL</div>
         <h2>Credits</h2>
+        <div class="section-label">[REC_001.2] PERSONNEL</div>
         <div class="about-content">
             <p><strong>Core Members:</strong></p>
             <p>Stephen A. Murphy - Guitars, Keys, Bass, Vocals</p>
