Move Credits h2 inside the about-content box

--- a/boney-files.html
+++ b/boney-files.html
@@ -131,12 +131,13 @@
             font-weight: bold;
         }
 
-        #credits h2 {
-            margin-bottom: 8px;
-        }
-
         #credits .about-content {
             margin-top: 8px;
+        }
+
+        #credits .about-content h2 {
+            text-align: left;
+            margin-bottom: 20px;
         }
 
         /* Album covers container */
@@ -423,9 +424,9 @@
     </section>
 
     <section id="credits">
-        <h2>Credits</h2>
         <div class="section-label">[REC_001.2] PERSONNEL</div>
         <div class="about-content">
+            <h2>Credits</h2>
             <p><strong>Core Members:</strong></p>
             <p>Stephen A. Murphy - Guitars, Keys, Bass, Vocals</p>
             <p>John Caulfield - Guitars, Vocals</p>
