TME_10011: Boney Files header update and site-wide styling improvements
* Update boney-files.html header to match site-wide stamp style

- Add stamp-container with two-line logo and postmark
- Add SVG filter for stamp distress effect
- Update header layout with flexbox centering
- Match footer data-tag style to other pages

* Update boney-files.html text to match archaeological archive tone

- Rewrite content in researcher/archivist voice from year 3147
- Use terminology like "artifacts", "documentation", "analysis"
- Update section labels to match [REC_001] format
- Change "Track" references to "Artifact" in credits
- Update cover labels to "Primary/Secondary Visual Documentation"
- Consistent footer document ID format

* Revise boney-files.html to more technical, less sensationalistic tone

- Remove references to "dimensional coordinates", "interdimensional phenomena"
- Use dry, factual archivist language
- Focus on technical details: production methodology, instrumentation, format
- Simplified credits section with straightforward notes
- Matter-of-fact descriptions without dramatization

* Update Technical Assessment with provided text

* Update body paragraph with provided text

* Reduce detail-card header font size from 1.5rem to 1.2rem

* Update 2nd box text and remove hover effects from detail cards

* Override max-width on credits .about-content to match album section width

* Move Return to Archive Index button to footer area

* Add .page-subtitle class for consistent page title styling

* Use new .page-subtitle class for page title

* Reduce spacing between stamp container and page subtitle

* Reduce spacing between header and album content

* Increase space between archive label and logo stamp

* Increase spacing between logo stamp and page subtitle

* Make page subtitle bigger (1.8rem) with text shadow

* Move page subtitle closer to content section

* Increase margin-top on page subtitle to 40px for more space below logo

* Increase margin-top on page s

--- a/about.html
+++ b/about.html
@@ -9,23 +9,22 @@
     <style>
         /* Page-specific styles for about.html */
         header {
-            padding: 60px 20px;
+            padding: 60px 20px 10px 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
         }
 
         header .archive-label {
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         header h2 {
             text-align: center;
         }
 
-        /* Wider parchment boxes */
-        .about-content {
-            max-width: 1000px;
+        #origin {
+            padding-top: 20px;
         }
 
         .about-content .section-label {
@@ -85,8 +84,7 @@
                 <span class="postmark-text-bottom">ARCHIVE DEPT</span>
             </div>
         </div>
-        <p style="color: #3d2813; font-size: 1.1rem; font-style: italic; font-weight: bold; margin-top: 15px;">Research Report - Case #1310</p>
-        <a href="index.html" class="back-link">← Return to Archive Index</a>
+        <p class="page-subtitle">Research Report - Case #1310</p>
     </header>
 
     <section id="origin">
@@ -137,7 +135,8 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
+        <a href="index.html" class="back-link">← Return to Archive Index</a>
+        <p style="margin-top: 20px;">&copy; 2024 Archaeological Research Archive | Case #1310: The Murphy Experiment</p>
         <p style="margin-top: 10px; font-style: italic;">"Yeah, but what if we tried THIS instead?"</p>
         <p class="data-tag" style="text-align: center; margin-top: 15px; border-top: none; padding-top: 0;">Document ID: TME-1310-ABOUT | SESSION: ACTIVE</p>
     </footer>
